test_inputs/bad/error_in_binop.lat
int main() {
    boolean a = true || error();
    return 0;
}
